--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.23"
+clap = { version = "4.0.29", features = ["derive"] }
+clokwerk = "0.4.0"
+env_logger = "0.10.0"
+log = "0.4.17"
+reqwest = "0.11.13"
+serde = { version = "1.0.150", features = ["derive"] }
+tokio = { version = "1.23.0", features = ["full"] }
+toml = "0.5.9"
+url = "2.3.0"
