--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.3.1"
 chrono = "0.4.23"
 clap = { version = "4.0.29", features = ["derive"] }
 clokwerk = "0.4.0"
@@ -16,3 +17,4 @@ serde = { version = "1.0.150", features = ["derive"] }
 tokio = { version = "1.23.0", features = ["full"] }
 toml = "0.5.9"
 url = "2.3.0"
+futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
