--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ tokio = { version = "1.23.0", features = ["full"] }
 toml = "0.5.9"
 url = "2.3.0"
 futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
+base64 = { version = "0.21.2", features = ["std", "alloc"] }
