--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ toml = "0.5.9"
 url = "2.3.0"
 futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
 base64 = { version = "0.21.2", features = ["std", "alloc"] }
+eax = "0.5.0"
+aes = "0.8.3"
+rand = "0.8.5"
