--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ futures-util = { version = "0.3.17", default-features = false, features = ["std"
 base64 = { version = "0.21.2", features = ["std", "alloc"] }
 rand = "0.8.5"
 magic-crypt = "3.1.12"
+sha256 = "1.1.4"
