--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         mkdir -p /app
         rsync -a --exclude 'target' /src/* /app/
         cd /app
-        cargo run --bin bot -- --config-path /app/etc/config-docker-bot0.toml
+        cargo run --release --bin bot -- --config-path /app/etc/config-docker-bot0.toml
     ports:
       - "8080:8080"
   bot1:
@@ -30,7 +30,7 @@ services:
         mkdir -p /app
         rsync -a --exclude 'target' /src/* /app/
         cd /app
-        cargo run --bin bot -- --config-path /app/etc/config-docker-bot1.toml
+        cargo run --release --bin bot -- --config-path /app/etc/config-docker-bot1.toml
     ports:
       - "8081:8080"
   bot2:
@@ -46,7 +46,7 @@ services:
         mkdir -p /app
         rsync -a --exclude 'target' /src/* /app/
         cd /app
-        cargo run --bin bot -- --config-path /app/etc/config-docker-bot2.toml
+        cargo run --release --bin bot -- --config-path /app/etc/config-docker-bot2.toml
     ports:
       - "8082:8080"
   bot3:
@@ -62,7 +62,7 @@ services:
         mkdir -p /app
         rsync -a --exclude 'target' /src/* /app/
         cd /app
-        cargo run --bin bot -- --config-path /app/etc/config-docker-bot3.toml
+        cargo run --release --bin bot -- --config-path /app/etc/config-docker-bot3.toml
     ports:
       - "8083:8080"
   bot4:
@@ -78,6 +78,6 @@ services:
         mkdir -p /app
         rsync -a --exclude 'target' /src/* /app/
         cd /app
-        cargo run --bin bot -- --config-path /app/etc/config-docker-bot4.toml
+        cargo run --release --bin bot -- --config-path /app/etc/config-docker-bot4.toml
     ports:
       - "8084:8080"
