--- a/etc/config-docker-bot1.toml
+++ b/etc/config-docker-bot1.toml
@@ -4,6 +4,8 @@ host="0.0.0.0"
 port=8080
 endpoint="/"
 maxrouteweight=10
+tracing=false
+loglevel="info"
 
 [peer.docker-bot0]
 url="http://bot0:8080/"
