--- a/etc/config-docker-bot0.toml
+++ b/etc/config-docker-bot0.toml
@@ -6,8 +6,7 @@ endpoint="/"
 maxrouteweight=10
 tracing=false
 loglevel="info"
-# panicroutingthreshold
-# dropthreshold
+ticketexpiration=10
 
 [peer.docker-bot1]
 url="http://bot1:8080/"
