--- a/etc/config-docker-bot3.toml
+++ b/etc/config-docker-bot3.toml
@@ -1,12 +1,21 @@
-secret="01234567890123456789012345678901"
 id="docker-bot3"
+maxrouteweight=10
+loglevel="info"
+ticketexpiration=10
+
+[public_http]
 host="0.0.0.0"
 port=8080
 endpoint="/"
-maxrouteweight=10
 tracing=false
-loglevel="info"
-ticketexpiration=10
+secret="01234567890123456789012345678901"
+
+[private_http]
+host="0.0.0.0"
+port=8081
+tracing=false
+ticket_endpoint="/ticket"
+
 
 [peer.docker-bot2]
 url="http://bot2:8080/"
