--- a/etc/config-docker-bot0.toml
+++ b/etc/config-docker-bot0.toml
@@ -24,7 +24,7 @@ polling=false
 delay=1
 destination_id="docker-bot4"
 
-[trace.docker-bot4]
-delay=10
-destination_id="docker-bot4"
-request_id="bot4"
+# [trace.docker-bot4]
+# delay=10
+# destination_id="docker-bot4"
+# request_id="bot4"
