--- a/etc/config-docker-bot0.toml
+++ b/etc/config-docker-bot0.toml
@@ -1,7 +1,7 @@
 id="docker-bot0"
 maxrouteweight=10
 loglevel="info"
-ticketexpiration=10
+ticketexpiration=10000
 
 [public_http]
 host="0.0.0.0"
@@ -13,7 +13,7 @@ secret="01234567890123456789012345678901"
 [private_http]
 host="0.0.0.0"
 port=8081
-tracing=false
+tracing=true
 ticket_endpoint="/ticket"
 
 [peer.docker-bot1]
