--- a/etc/config-docker-bot2.toml
+++ b/etc/config-docker-bot2.toml
@@ -10,13 +10,12 @@ endpoint="/"
 tracing=false
 secret="01234567890123456789012345678901"
 
-
 [private_http]
 host="0.0.0.0"
 port=8081
 tracing=false
-ticket_endpoint="/ticket"
-
+ticket_sync_endpoint="/ticket/sync"
+ticket_async_endpoint="/ticket/async"
 
 [peer.docker-bot1]
 url="http://bot1:8080/"
