--- a/etc/config-docker-bot3.toml
+++ b/etc/config-docker-bot3.toml
@@ -14,8 +14,8 @@ secret="01234567890123456789012345678901"
 host="0.0.0.0"
 port=8081
 tracing=false
-ticket_endpoint="/ticket"
-
+ticket_sync_endpoint="/ticket/sync"
+ticket_async_endpoint="/ticket/async"
 
 [peer.docker-bot2]
 url="http://bot2:8080/"
