--- a/etc/config-docker-bot3.toml
+++ b/etc/config-docker-bot3.toml
@@ -17,9 +17,9 @@ tracing=false
 ticket_sync_endpoint="/ticket/sync"
 ticket_async_endpoint="/ticket/async"
 
-[peer.docker-bot2]
-url="http://bot2:8080/"
-polling=false
+# [peer.docker-bot2]
+# url="http://bot2:8080/"
+# polling=false
 
 [peer.docker-bot4]
 url="http://bot4:8080/"
