rename ticket to ticket message, broadcast tickets

--- a/etc/config-docker-bot0.toml
+++ b/etc/config-docker-bot0.toml
@@ -2,6 +2,7 @@ id="docker-bot0"
 maxrouteweight=10
 loglevel="info"
 ticketexpiration=10000
+broadcastexpiration=10000
 
 [public_http]
 host="0.0.0.0"
