--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  bot0:
+  c0:
     build:
       dockerfile: ./Dockerfile
     volumes:
@@ -14,11 +14,11 @@ services:
         mkdir -p /app
         rsync -a --exclude 'target' /src/* /app/
         cd /app
-        cargo run --release --bin bot -- --config-path /app/etc/config-docker-bot0.toml
+        cargo run --release --bin bot -- --config-path /app/etc/c0.toml
     ports:
       - "8080:8080"
       - "8090:8081"
-  bot1:
+  c1:
     build:
       dockerfile: ./Dockerfile
     volumes:
@@ -31,11 +31,11 @@ services:
         mkdir -p /app
         rsync -a --exclude 'target' /src/* /app/
         cd /app
-        cargo run --release --bin bot -- --config-path /app/etc/config-docker-bot1.toml
+        cargo run --release --bin bot -- --config-path /app/etc/c1.toml
     ports:
       - "8081:8080"
       - "8091:8081"
-  bot2:
+  s0:
     build:
       dockerfile: ./Dockerfile
     volumes:
@@ -48,11 +48,11 @@ services:
         mkdir -p /app
         rsync -a --exclude 'target' /src/* /app/
         cd /app
-        cargo run --release --bin bot -- --config-path /app/etc/config-docker-bot2.toml
+        cargo run --release --bin bot -- --config-path /app/etc/s0.toml
     ports:
       - "8082:8080"
       - "8092:8081"
-  bot3:
+  s1:
     build:
       dockerfile: ./Dockerfile
     volumes:
@@ -65,24 +65,7 @@ services:
         mkdir -p /app
         rsync -a --exclude 'target' /src/* /app/
         cd /app
-        cargo run --release --bin bot -- --config-path /app/etc/config-docker-bot3.toml
+        cargo run --release --bin bot -- --config-path /app/etc/s1.toml
     ports:
       - "8083:8080"
       - "8093:8081"
-  bot4:
-    build:
-      dockerfile: ./Dockerfile
-    volumes:
-      - ./:/src
-    command:
-      - bash
-      - -c
-      - |
-        set -e
-        mkdir -p /app
-        rsync -a --exclude 'target' /src/* /app/
-        cd /app
-        cargo run --release --bin bot -- --config-path /app/etc/config-docker-bot4.toml
-    ports:
-      - "8084:8080"
-      - "8094:8081"
